--- a/src/components/calculator/calc-component.module.css
+++ b/src/components/calculator/calc-component.module.css
@@ -25,7 +25,7 @@
   }
   .brandContainer {
     width: 90%;
-    height: 70%;
+    height: 75%;
     flex-direction: column;
     align-items: flex-start;
   }
