--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 4px;
+  background-color: rgba(255, 249, 225, 0.331);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
